Avoid creating unnecessary clipping layers

There is no need for a clip layer that does not clip anything.
Detect that case.

Bug: 730668
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I7e55c11cd54198dcfea2dc547e27133294465795